# yak-mania

./: .gitignore  Cargo.toml  LICENSE  README.md  ci-template.yml  root-template.yml  rust-toolchain.toml
ci-config/: buildspec.yml
graphql/: schema.gql
local_testing/: 1-infra.sh  2-lambda.sh  3-scenario.sh  README.md
local_testing/appsync_events/: admin.mutation.removePlayer.json  admin.mutation.resetGame.json  admin.mutation.startGame.json  admin.mutation.stopGame.json  mutation.buyBabyYak.json  mutation.buyGrownYak.json  mutation.buyUnshearedYak.json  mutation.registerNewPlayer.json  mutation.sellGrownYak.json  mutation.sellShearedYak.json  mutation.sellUnshearedYak.json  mutation.updatePlayerName.json  query.gameState.json
nix/: flake.nix
python/lambdas/cleanup-s3/: index.py
python/lambdas/no-instrumentation-demo/: index.py
python/lambdas/xray-sdk-demo/: index.py
rust/lambdas/appsync-source/: Cargo.toml  build.rs
rust/lambdas/appsync-source/src/: dynamodb_table.rs  error_utils.rs  main.rs  operations.rs  subscription.rs
rust/lambdas/appsync-source/src/game_engine/: game_status.rs  game_update.rs  internal.rs  job.rs  job_fees.rs  mod.rs  player.rs  player_assignment.rs  yak.rs  yak_counts.rs
rust/lambdas/instrumentation-demo/: Cargo.toml
rust/lambdas/instrumentation-demo/src/: main.rs
rust/lambdas/no-instrumentation-demo/: Cargo.toml
rust/lambdas/no-instrumentation-demo/src/: main.rs
templates/: cognito.yml  graphqlapi.yml  static-website.yml  tracing-demo.yml
tools/: publish_tracing_demo.py
tools/simulate_players/: Cargo.toml
tools/simulate_players/src/: api.rs  bot.rs  config.rs  cost.rs  game_state.rs  main.rs  websocket.rs
website/: .gitignore  AGENTS.md  buildspec.yml  package-lock.json  package.json  vite.config.js
website/src/: app.css  app.html  hooks.client.js
website/src/lib/: alerts.svelte.js  amplify.js  auth.svelte.js  game.svelte.js  player.svelte.js  validator.svelte.js
website/src/lib/components/: AlertDisplay.svelte  BreederView.svelte  CModal.svelte  DriverOverlay.svelte  DriverView.svelte  JobSelector.svelte  LoadingOverlay.svelte  PlayerHeader.svelte  ShearerView.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/admin/: +layout.svelte  +page.svelte
website/src/routes/admin/dashboard/: +page.svelte
website/static/: error.html
