[workspace]
members = ["rust/lambdas/*", "tools/*"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"
authors = ["Jérémie RODON <jeremie.rodon@gmail.com>"]
license = "MIT"

[workspace.dependencies]
lambda-appsync = { version = "0.10", features = ["tracing"] }
awssdk-instrumentation = "0.1"
# Pending the release of dynamodb-facade v0.1.0
dynamodb-facade = { git = "https://github.com/RustyServerless/dynamodb-facade", branch = "stable" }
# dynamodb-facade = { path = "../dynamodb-facade" }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

tokio = { version = "1", features = ["macros", "signal"] }
aws_lambda_events = "1"
lambda_runtime = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1.0"
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

rand = "0.9"
