[package]
name = "simulate_players"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lambda-appsync = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
rustls = { version = "0.23"}
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
url = "2"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }



# clap = { version = "4.5", features = ["derive", "env"] }
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# lambda-appsync = { workspace = true }
# tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# log = "0.4"
# env_logger = "0.11"
# uuid = { version = "1.11", features = ["v4"] }
# rand = "0.9"
# base64 = "0.22"
# url = "2"
# futures-util = "0.3"
